--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,38 +1,51 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        HackspaceUni\ChatBundle\Entity\Usuario:
+          algorithm: sha512
+          encode-as-base64: true
+          iterations: 10
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN:       [ROLE_USER]
+        #ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        #in_memory:
+            #memory:
+                #users:
+                    #user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                    #admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        Chat:
+          entity:
+            class: HackspaceUni\ChatBundle\Entity\Usuario
+            property: nombreusuario :
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: _security_check
-                login_path: _demo_login
-            logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
-
+        Chat:
+          pattern: /.*
+          provider: Chat
+          form_login:
+            login_path: /login
+            check_path: /login_check
+            remember_me: true
+          logout:
+            path: /logout
+            target: /
+          remember_me:
+            key: MiClaveSegura
+            lifetime: 1800
+            path: /.*
+            domain: ~
+          security: true
+          anonymous: true
+    
     access_control:
+      - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: /user, roles: ROLE_USER }
+      - { path: /admin, roles: ROLE_ADMIN }
+      - { path: /.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }      
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
